--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="faq">
             <div class="question">
-                <h3>What is IETE?</h3>
+                <h3>What is the objective of IETE?</h3>
 
                 <svg width="15" height="10" viewBox="0 0 42 25">
                     <path d="M3 3L21 21L39 3" stroke = "white" stroke-width="7" stroke-linecap="round"/>
@@ -25,10 +25,9 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Mattis vulputate enim nulla aliquet porttitor lacus.
-                     Faucibus purus in massa tempor nec. 
-                    A erat nam at lectus urna duis convallis. 
-                    Pellentesque elit eget gravida cum sociis natoque ue.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat.
+                     Duis aute irure dolor in reprehenderit in voluptate
                 </p>
             </div>
 
@@ -36,7 +35,7 @@
 
         <div class="faq">
             <div class="question">
-                <h3>What is IETE?</h3>
+                <h3>Events conducted in Elan?</h3>
 
                 <svg width="15" height="10" viewBox="0 0 42 25">
                     <path d="M3 3L21 21L39 3" stroke = "white" stroke-width="7" stroke-linecap="round"/>
@@ -45,12 +44,11 @@
 
             <div class="answer">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Mattis vulputate enim nulla aliquet porttitor lacus.
-                     Faucibus purus in massa tempor nec. 
-                    A erat nam at lectus urna duis convallis. 
-                    Pellentesque elit eget gravida cum sociis natoque ue.
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat.
+                     Duis aute irure dolor in reprehenderit in voluptate 
                 </p>
             </div>
 
@@ -58,7 +56,7 @@
 
         <div class="faq">
             <div class="question">
-                <h3>Objectivwe of IETe?</h3>
+                <h3>How to be a part of IETE?</h3>
 
                 <svg width="15" height="10" viewBox="0 0 42 25">
                     <path d="M3 3L21 21L39 3" stroke = "white" stroke-width="7" stroke-linecap="round"/>
@@ -69,10 +67,30 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Mattis vulputate enim nulla aliquet porttitor lacus.
-                     Faucibus purus in massa tempor nec. 
-                    A erat nam at lectus urna duis convallis. 
-                    Pellentesque elit eget gravida cum sociis natoque ue.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat.
+                     Duis aute irure dolor in reprehenderit in voluptate
+                </p>
+            </div>
+
+        </div>
+
+        <div class="faq">
+            <div class="question">
+                <h3>When will be the event held?</h3>
+
+                <svg width="15" height="10" viewBox="0 0 42 25">
+                    <path d="M3 3L21 21L39 3" stroke = "white" stroke-width="7" stroke-linecap="round"/>
+                </svg>
+            </div>
+
+            <div class="answer">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat.
+                     Duis aute irure dolor in reprehenderit in voluptate
                 </p>
             </div>
 
